--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://bot.orimon.ai/deploy/index.js" tenantId="8d8e3b15-fba4-46a3-83be-16408473cf8e"></script>
     
 
     <title>mypage</title>
@@ -38,6 +39,7 @@
             <br>
             <center><h3>“The question of whether a computer can think is no more interesting than the question of whether a submarine can swim.”<br>
               ― Edsger W. Dijkstra</h3></center>
+              <h1>CICK ON THE BOT BELOW TO START</h1>
           </div>
           <footer>
             <br>
