--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://bot.orimon.ai/deploy/index.js" tenantId="8d8e3b15-fba4-46a3-83be-16408473cf8e"></script>
+  <script defer type="text/javascript" src="https://myaskai.com/ev-embed-chat-js-min" id="qlZZoNQPFUzK8FtNWGr2STXUAdQKW7"></script>
     
 
     <title>mypage</title>
